react-sre-project/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-sre-app
  namespace: react-sre-app
  labels:
    app: react-sre-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: react-sre-app
